tests/snapshots/integration__integration_tests__merge__merge_auto_commit_with_message.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "-m"
    - Complete the user dashboard feature
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_COMMIT_GENERATION__ARGS: "feat: complete user dashboard"
    WORKTRUNK_COMMIT_GENERATION__COMMAND: echo
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpNYiicC/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mValidating merge...[0m
🔄 [36mCommitting uncommitted changes...[0m
🔄 [36mGenerating commit message...[0m
[40m [0m [1mWIP: Auto-commit before merge[0m

✅ [32mCommitted changes[0m
🔄 [36mRebasing onto [1m[36mmain[0m...[0m
🔄 [36mPushing 2 commits to [1m[36mmain[0m @ [SHA][0m

* [SHA][33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature[m[33m)[m WIP: Auto-commit before merge
* [SHA] feat: start feature

 feature.txt | 1 [32m+[m
 1 file changed, 1 insertion(+)

✅ [32mPushed to [1m[32mmain[0m (2 commits, 1 file, [32m+1[0m)  [0m
🔄 [36mCleaning up worktree...[0m

✅ [32mReturned to primary at [REPO][0m

----- stderr -----
