tests/snapshots/integration__integration_tests__merge__merge_no_commits_with_changes.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
🟡 [33mAuto-staging 1 untracked file:[0m
[107m [0m  newfile.txt
🔄 [36mCommitting with default message...[0m (1 file, [32m+1[0m, no squashing needed)
💡 [2mUsing fallback commit message. Run 'wt config --help' for LLM setup guide[0m
[107m [0m  [1mChanges to newfile.txt[0m
✅ [32mCommitted changes @ [2m[SHA][0m
🔄 [36mMerging 1 commit to [1m[36mmain[0m[36m @ [2m[SHA][0m (no rebase needed)
[107m [0m  * [SHA][33m ([m[1;36mHEAD[m[33m -> [m[1;32mno-commits-dirty[m[33m)[m Changes to newfile.txt
[107m [0m   newfile.txt | 1 [32m+[m
[107m [0m   1 file changed, 1 insertion(+)
✅ [32mMerged to [1m[32mmain[0m[0m (1 commit, 1 file, [32m+1[0m)
🔄 [36mRemoving worktree & branch...[0m
✅ [32mRemoved worktree & branch for [1m[32mno-commits-dirty[0m[32m, changed directory to [1m[32m[REPO][0m[0m

----- stderr -----
